<resources>
    <string name="app_name">Home Work 3</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="cloudiness">Cloudiness</string>
    <string name="humidity">Humidity</string>
    <string name="now">Now</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="_81">81%</string>
    <string name="_100">100%</string>
    <string name="sunrise">Sunrise</string>
    <string name="_06_00">06:00</string>
    <string name="_20_31">20:31</string>
    <string name="_29">29</string>
    <string name="_21">21</string>
    <string name="_28">28</string>
    <string name="_24">24</string>
    <string name="title_home">title</string>
    <string name="title_users">users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeZone">Time Zone</string>
    <string name="temp_min_max">Temp min/max</string>
    <string name="weather">Weather</string>
</resources>